--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -316,10 +316,39 @@ However this SPIN code looks like, all we have to provide to make it work is the
           dsp:nonLiteralConstraint [ dsp:valueClass Person ] ] ] .
 \end{ex}
 
-% -This constraint can either be represented generically (\emph{generic constraint}) by \emph{description logics (DL)}: {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}} or
-%The knowledge representation formalism {\em DL}, with its  well-studied theoretical properties, provides the foundational basis to express constraints in a generic way. 
-%For this reason, we mapped constraint types to DL 
-%in order to determine which DL constructs are needed to express constraint types \cite{BoschNolleAcarEckert2015}.
+In further investigation of all kind of constraints and particularly the list of constraint types, we aimed at identifying the building blocks of such constraints to come up with a concise representation of every constraint type. 
+
+
+\subsection{Building blocks}
+
+At the core, we use a very simple conceptual model for constraints, using a small vocabulary called \emph{RDF Constraints Vocabulary (RDF-CV)}\footnote{Online available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}}. The conceptual model is shown in Figure \ref{fig:RDF-CV-conceptual-model}.
+\begin{figure}[H]
+	\centering
+		\includegraphics[width=0.60\textwidth]{images/RDF-CV.png}
+	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} Conceptual Model}
+	\label{fig:RDF-CV-conceptual-model}
+\end{figure}
+
+\emph{Simple constraints} denotes the set of atomic constraints with respect to a single constraining element -- we will come to the notion of a constraining element in a second. In contrast, there are  
+\emph{complex constraints}, i.e., the set of constraints which are created out of \emph{simple} and/or other \emph{complex constraints}. This structure therefore allows to build complex constraints out of other (simple or complex) constraints. Regarding our database of constraint types, 60\% of the constraint types are simple constraints and 26\% are complex constraints. 
+Constraints of additional 14\% of the constraint types are \emph{complex constraints} as well which can be simplified and therefore formulated as \emph{simple constraints} if additional constraining elements are introduced to cover them.
+
+The properties describing a simple constrained are very structural. The central property is the \emph{constraining element} which refers to one of 103 contraining elements described in our technical report \cite{BoschNolleAcarEckert2015}. Constraining elements are for example taken from Description Logics, another concrete example would be 'regex' where a regular expression is checked against some property value. Sometimes the constraining elements directly correspond to a constraint type, sometime (as for regex) they are shared by several constraint types. Complex constraints again need several constraing elements to be expressed.
+
+Irrespective of and additonal to the constraining element, there are properties to describe the actual constraint, they can also be seen as parameters for the constraining element. The \emph{context class} limits the constraint to individuals of a specific class. Depending on the constraining elements, a list of \emph{classes} can be provided, for example to determine the valid classes for a value or to define a class intersection to be used in a constraint. \emph{leftProperties} and \emph{rightProperties} are lists usually containing properties the constraint is applied to. A typical example for a constraint with a right hand side list of properties would be R43, literal value comparision, where constraints like birthDate < deathDate can be expressed.
+
+Finally, the \emph{constrainig value} contains a literal value to be checked against; for instance in the case of the 'regex' element, it contains the regular expression to be evaluated.
+
+This simple structure plus the constraining elements form the building blocks of our proposed framework. In the technical report \cite{BoschNolleAcarEckert2015}, we list for every constraint type its representation in our framework which not only shows that constraints of any constraint type can indeed be described generically in this way, but which also forms the starting point for any mappings using this framework.
+
+\textbf{\emph{DL Expressivity}:}
+The \emph{RDF-CV} allows to describe 
+constraints which are either \emph{expressible in DL} (64\%) or which are \emph{not expressible in DL} (36\%). Constraints which are expressible in DL are instantiated from 64\% of the overall 81 constraint types. On the other hand, constraints which are not expressible in DL are assigned to 36\% of all constraint types.
+%In case a constraint type is \emph{expressible in DL}, we determined which DL constructs are needed to express the constraint type.
+
+
+
+Altogether, instances of the most of the constraint types are \emph{simple constraints on properties} which are \emph{expressible in DL}. 
 
 
 Prerequisites to develop a vocabulary to describe RDF constraints of any RDF constraint type are (1) to specify the underlying semantics for RDF validation and thus for the vocabulary and (2) to define a basic terminology and classification system for RDF constraints which lay the ground for discussions on RDF validation.
@@ -365,87 +394,10 @@ we thereby document identical semantics of these languages with regard to given 
 This is also important in order to prove that semantically equivalent \emph{specific constraints} and corresponding \emph{generic constraints}
 behave in the same way w.r.t. validation results which semantically underpins bidirectional mappings.
 
-\subsection{Constraining Elements}
-
-A \emph{constraint language} is a language which is used to formulate constraints.
-The W3C working group defines \emph{RDF constraint} as a component of a schema what needs to be satisfied\footnote{\url{https://www.w3.org/2014/data-shapes/wiki/Glossary}}.
-As there are already five promising constraint languages, 
-our purpose is not to invent a new language.
-As there is no high-level declarative language which meets all RDF validation requirements,
-we rather developed a very simple lightweight vocabulary,
-consisting of only three classes, three object properties, and three data properties, 
-which is universal enough to describe constraints of any constraint type.
-We call this vocabulary the \emph{RDF Constraints Vocabulary (RDF-CV)}\footnote{Online available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}} whose conceptual model is shown in Figure \ref{fig:RDF-CV-conceptual-model}.
-\begin{figure}[H]
-	\centering
-		\includegraphics[width=0.60\textwidth]{images/RDF-CV-conceptual-model.png}
-	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} Conceptual Model}
-	\label{fig:RDF-CV-conceptual-model}
-\end{figure}
-
-We classify sets of constraints according to four dimensions.
-For each constraint type, we evaluated \cite{BoschNolleAcarEckert2015} in which set of constraints their instances are contained.
-%In the following, we state the rounded number of associated constraint types in brackets.
-%\begin{itemize}
-  %\item \emph{Universality:} \emph{specific constraints} vs. \emph{generic constraints}
-	%\item \emph{Complexity:} \emph{simple constraints} vs. \emph{complex constraints}
-	%\item \emph{Context:} \emph{property constraints} vs. \emph{class constraints}
-	%\item \emph{DL Expressivity:} \emph{constraints expressible in DL} vs. \emph{constraints not expressible in DL}
-%\end{itemize}
-%(1) \emph{Universality:} \emph{specific constraints} vs. \emph{generic constraints},
-%(2) \emph{Complexity:} \emph{simple constraints} vs. \emph{complex constraints},
-%(3) \emph{Context:} \emph{property constraints} vs. \emph{class constraints}, and
-%(4) \emph{DL Expressivity:} \emph{constraints expressible in DL} vs. \emph{constraints not expressible in DL}.
-
-\textbf{\emph{Universality}:}
-Constraints are expressible either generically (\emph{generic constraints}) using the \emph{RDF-CV}   
-or specifically (\emph{specific constraints}) by domain-specific constraint languages. 
-As we express constraints of each constraint type in form of \emph{generic constraints} conforming to the \emph{RDF-CV} \cite{BoschNolleAcarEckert2015},
-we show that constraints of any constraint type can be described generically.
-
-\textbf{\emph{DL Expressivity}:}
-The \emph{RDF-CV} allows to describe 
-constraints which are either \emph{expressible in DL} (64\%) or which are \emph{not expressible in DL} (36\%). Constraints which are expressible in DL are instantiated from 64\% of the overall 81 constraint types. On the other hand, constraints which are not expressible in DL are assigned to 36\% of all constraint types.
-%In case a constraint type is \emph{expressible in DL}, we determined which DL constructs are needed to express the constraint type.
-
-\textbf{\emph{Complexity}:}
-\emph{Simple constraints} (60\% of the constraint types) denotes the set of atomic constraints. 
-%which can be instantiated from almost 2/3 of the constraint types.
-\emph{Complex constraints} (26\%) is the set of constraints which are created out of \emph{simple} and/or other \emph{complex constraints}.
-%and which are instances of 1/4 of the constraint types.
-%In case \emph{complex constraints} are expressible in DL, 
-%DL statements representing \emph{complex constraints} contain DL statements standing for atomic and/or composed constraints. 
-Constraints of almost 14\% of the constraint types are \emph{complex constraints} which can be simplified and therefore formulated as \emph{simple constraints} when using them in terms of syntactic sugar.
-
-\textbf{\emph{Context}:}
-\emph{Simple constraints} are applied on properties (\emph{property constraints}, 60\%),
-on classes (\emph{class constraints}, 25\%), or
-on properties and classes (\emph{property and class constraints}, 15\%).
-%2/3 of all constraint types are types of \emph{property constraints}, 
-%1/5 of \emph{class constraints}, and 
-%approx. 10\% of \emph{property and class constraints}.
-\emph{Simple constraints} must hold for individuals of their associated \emph{context classes}.
-As \emph{context classes} of \emph{simple constraints} are reused within \emph{complex constraints},
-it does not make sense to have terms standing for \emph{simple} and \emph{complex constraints} within the \emph{RDF-CV}. 
-As a consequence, the distinction of \emph{property} and \emph{class constraints} is sufficient to generically describe constraints of all constraint types.
-%\tb{use RDF-CV / not: expressible in RDF-CV / RDF-CV is a vocabulary, not a language}
-
-Altogether, instances of the most of the constraint types are \emph{simple constraints on properties} which are \emph{expressible in DL}. 
-%Thus, the majority of constraint types are directly and relatively easy formulated in form of \emph{simple constraints} which can be mapped to equivalent DL constructs.
 
 \subsection{\emph{Simple Constraints}}
 
-The implementation model of the \emph{RDF-CV} (Figure \ref{fig:RDF-CV-implementation-model}) shows that
-both \emph{property constraints} and \emph{class constraints} are \emph{simple constraints}. 
-%For both \emph{property} and \emph{class constraints} a \emph{context class}, a list of \emph{classes}, the \emph{constraining element}, and the \emph{constraining value} can be stated. 
-%Lists of \emph{left} and \emph{right properties} can only be specified for \emph{property constraints}.
-\begin{figure}[H]
-	\centering
-		\includegraphics[width=0.80\textwidth]{images/RDF-CV-implementation-model.png}
-	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} Implementation Model}
-	\label{fig:RDF-CV-implementation-model}
-\end{figure}
-A simple constraint holds for all individuals of their associated \emph{context class}.
+
 The \emph{minimum qualified cardinality restriction (R-75)} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person,}}
 which restricts publications to have at least one author which must be a person,
 is an example of a property constraint on \emph{author}
